--- a/main.bib
+++ b/main.bib
@@ -3,6 +3,102 @@
 	# "\newcommand{\singleletter}[1]{#1} "
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 
+@article{diiid,
+author = {Schissel, D P and Mcharg, B B},
+file = {::},
+number = {October},
+title = {{Data Analysis Infrastructure at the Diii-D National Fusion Facility}},
+url = {https://fusion.gat.com/pubs-ext/miscpubs/A23474.pdf},
+year = {2000}
+}
+
+@article{boschhale,
+author = {Bosch, H and Hale, G M},
+file = {::},
+title = {{Improved formulas for fusion cross-sections and thermal reactivities}},
+url = {http://iopscience.iop.org/article/10.1088/0029-5515/32/4/I07/pdf},
+volume = {611}
+}
+@techreport{zach,
+author = {Hartwig, Zachary S and Podpaly, Yuri A},
+file = {::},
+keywords = {()},
+title = {{Magnetic Fusion Energy Formulary}},
+url = {https://library.psfc.mit.edu/catalog/online{\_}pubs/MFE{\_}formulary{\_}2014.pdf},
+year = {2014}
+}
+
+
+@article{kessel_bootstrap,
+abstract = {The bootstrap current in a tokamak is examined by implementing the Hirshman-Sigmar model and comparing the predicted current profiles with those from two popular approximations. The dependences of the bootstrap current profile on the plasma properties are illustrated. The implications for steady state tokamaks are presented through two constraints; the pressure profile must be peaked and $\beta$ p must be kept below a critical value},
+author = {Kessel, C. E.},
+doi = {10.1088/0029-5515/34/9/I04},
+file = {::},
+isbn = {0066-4154},
+issn = {00295515},
+journal = {Nuclear Fusion},
+number = {9},
+pages = {1221--1238},
+pmid = {19231986},
+title = {{Bootstrap current in a tokamak}},
+url = {https://inis.iaea.org/collection/NCLCollectionStore/{\_}Public/25/048/25048606.pdf},
+volume = {34},
+year = {1994}
+}
+
+
+@book{wesson,
+  title={Tokamaks},
+  author={Wesson, John and Campbell, David J},
+  volume={149},
+  year={2011},
+  publisher={Oxford University Press}
+}
+
+@misc{process_guide,
+author = {Knight, P J and Kovari, M D},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Knight, Kovari - 2016 - A User Guide to the PROCESS Fusion Reactor Systems Code.pdf:pdf},
+keywords = {()},
+title = {{A User Guide to the PROCESS Fusion Reactor Systems Code}},
+url = {http://www.ccfe.ac.uk/assets/Documents/Other/A User Guide to the PROCESS systems code.pdf},
+year = {2016}
+}
+
+@article{density,
+abstract = {Scaling of density peaking H Weisen, A Zabolotsky, M Maslov et al.-Density profile peaking in JET H-mode plasmas: experiments versus linear gyrokinetic predictions M. Maslov, C. Angioni, H. Weisen et al.-Recent citations Integrated modelling of H-mode pedestal and confinement in JET-ILW S Saarelma et al-Observation of enhanced ion particle transport in mixed H/D isotope plasmas on JET M. Maslov et al-Investigation of key parameters for the development of reliable ITER baseline operation scenarios using CORSICA S.H. Kim et al-This content was downloaded from Abstract For the first time, scalings for density peaking in tokamaks are obtained from a database consisting of observations from two devices, ASDEX Upgrade and JET. The investigation relies on an inversion method for the interferometer signals which grants consistent reconstructions despite differences in interferometer geometries. By combining observations from these devices, correlations between physics parameters investigated for their role in determining density peaking are reduced. Multiple regression analyses show that in the combined database collisionality is the most relevant parameter. The particle source provided by neutral beam injection provides a contribution to the peaking, which, although not negligible, is not large enough to explain the whole observed variation of density peaking. The device size, introduced as an alias for possible systematic differences between the devices not captured by the regression parameters, is found to play only a small role in regressions which include collisionality. Device size becomes relevant in scalings which exclude collisionality and include the ratio of the density to the Greenwald density limit. This indicates that density peaking is more likely to be a function of collisionality rather than of the fraction of the density limit. All the scalings which include collisionality in the regression variables predict a peaked density profile for the ITER standard scenario.},
+author = {Mcdonald, D C and Cordey, J G and Thomsen, K and Angioni, C and Weisen, H and Kardaun, O J W F and Maslov, M and Zabolotsky, A and Fuchs, C and Garzotti, L and Giroud, C and Kurzan, B and Mantica, P and Peeters, A G and Stober, J},
+doi = {10.1088/0029-5515/47/9/033},
+file = {::},
+journal = {Nucl. Fusion},
+pages = {1326--1335},
+title = {{Scaling of density peaking in H-mode plasmas based on a combined database of AUG and JET observations}},
+url = {http://iopscience.iop.org/article/10.1088/0029-5515/47/9/033/pdf},
+volume = {47},
+year = {2018}
+}
+@article{pedestals,
+abstract = {The transport barrier which exists at the plasma edge in the high-confinement (H-mode) regime is now recognized as important to global energy confinement. Recently, detailed measurements of the width and height of barriers in electron and ion density and/or temperature have been made on several divertor tokamaks. These results are reviewed, with an emphasis on scalings of the pedestal height and width. Many experiments observe situations in which the limiting pedestal pressure gradient is well described by ideal ballooning stability. In some cases the extreme edge is in the 'second stable' regime. Differences between the widths of pedestals in electron and ion temperature and densities are noted in several experiments. Some reported scalings are Ti = 3.3 √ $\epsilon$$\rho$ i,pol on JT-60U, and Pe /R ∝ $\beta$ 0.4 pol,ped on DIII-D. Te is independent of plasma current in many experiments. Theoretical modelling of the fully developed H-mode pedestal is reviewed. Several recent predictions of the pedestal parameters and their scalings are outlined and compared with experiments.},
+author = {Saibene, G and Horton, L D and Sartori, R and Hubbard, A E},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Saibene et al. - 2000 - Physics and scaling of the H-mode pedestal The influence of isotope mass, edge magnetic shear and input power on.pdf:pdf},
+journal = {Control. Fusion},
+pages = {15--35},
+title = {{Physics and scaling of the H-mode pedestal The influence of isotope mass, edge magnetic shear and input power on high density ELMy H modes in JET Physics and scaling of the H-mode pedestal}},
+url = {http://iopscience.iop.org.libproxy.mit.edu/article/10.1088/0741-3335/42/5A/302/pdf},
+volume = {42},
+year = {2000}
+}
+@article{temperature,
+abstract = {Edge localized modes and the pedestal: A model based on coupled peeling–ballooning modes Physics of Plasmas 9, 2037 (2002); 10.1063/1.1449463 Development and validation of a predictive model for the pedestal height Physics of Plasmas 16, 056118 (2009); 10.1063/1.3122146 The EPED pedestal model and edge localized mode-suppressed regimes: Studies of quiescent H-mode and development of a model for edge localized mode suppression via resonant magnetic perturbations Physics of Plasmas 19, 056115 (2012); 10.1063/1.3699623 Physics of pedestal density profile formation and its impact on H-mode density limit in burning plasmas Physics of Plasmas 10, 3984 (2003); 10.1063/1.1605101 H-mode pedestal scaling in DIII-D, ASDEX Upgrade, and JET Physics of Plasmas 18, 056120 (2011); 10.1063/1.3593008 Numerical studies of edge localized instabilities in tokamaks Predictive models are developed for the temperature at the top at the edge of type 1 ELMy ͑edge localized mode͒ H-mode ͑high-confinement mode͒ plasmas. Theory-motivated models are used for the pedestal width and pressure gradient, while the pedestal density is obtained from experimental data in this study. The pedestal pressure gradient is assumed to be limited by the ballooning mode instability and is expressed in terms of the magnetic shear and geometrical factors. The effect of the bootstrap current, which reduces the magnetic shear in the steep pressure gradient region at the edge of the H-mode plasma, is included in the determination of the magnetic shear. Approaches for calculating the magnetic shear, combined with proposed models for the pedestal width, are used to determine the pedestal temperature. The computed pedestal temperatures are compared with more than 500 measured pedestal temperatures for type 1 ELMy H-mode discharges in four tokamaks. Some of the uncertainties in these results are discussed, and directions for future work to improve edge pedestal scalings are described.},
+author = {Onjun, T and Bateman, G and Kritz, A H and Hammett, G},
+doi = {10.1063/1.1518474͔},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Onjun et al. - 2002 - Models for the pedestal temperature at the edge of H-mode tokamak plasmas(2).pdf:pdf},
+journal = {Physics of Plasmas},
+number = {10},
+title = {{Models for the pedestal temperature at the edge of H-mode tokamak plasmas}},
+url = {https://doi.org/10.1063/1.1518474 http://aip.scitation.org/toc/php/9/12},
+volume = {9},
+year = {2002}
+}
 
 
 @article{hn85,
@@ -218,6 +314,7 @@ url = {http://iopscience.iop.org/article/10.1088/0029-5515/31/10/011/pdf},
 volume = {31},
 year = {1991}
 }
+
 @misc{greenwald,
 abstract = {In addition to the operational limits imposed by MHD stability on plasma current and pressure, an independent limit on plasma density is observed in confined toroidal plasmas. This review attempts to summarize recent work on the phenomenology and physics of the density limit. Perhaps the most surprising result is that all of the toroidal confinement devices considered operate in similar ranges of (suitably normalized) densities. The empirical scalings derived independently for tokamaks and reversed-field pinches are essentially identical, while stellarators appear to operate at somewhat higher densities with a different scaling. Dedicated density limit experiments have not been carried out for spheromaks and field-reversed configurations, however, `optimized' discharges in these devices are also well characterized by the same empirical law. In tokamaks, where the most extensive studies have been conducted, there is strong evidence linking the limit to physics near the plasma boundary: thus, it is possible to extend the operational range for line-averaged density by operating with peaked density profiles. Additional particles in the plasma core apparently have no effect on density limit physics. While there is no widely accepted, first principles model for the density limit, research in this area has focussed on mechanisms which lead to strong edge cooling. Theoretical work has concentrated on the consequences of increased impurity radiation which may dominate power balance at high densities and low temperatures. These theories are not entirely satisfactory as they require assumptions about edge transport and make predictions for power and impurity scaling that may not be consistent with experimental results. A separate thread of research looks for the cause in collisionality enhanced turbulent transport. While there is experimental and theoretical support for this approach, understanding of the underlying mechanisms is only at a rudimentary stage and no predictive capability is yet available.},
 archivePrefix = {arXiv},
