--- a/appa.tex
+++ b/appa.tex
@@ -170,6 +170,8 @@ As most of the pressure is at the center, we use simple parabolic profile. This 
 
 \section{Bootstrap Current -- $f_{BS}$}
 
+\label{section:pedestalbootstrap}
+
 We start with,
 
 \begin{equation}
@@ -243,106 +245,6 @@ And the values of $\partial{T}$ are:
 \begin{equation}
 	\partial{T}_{line} =  \left( \frac{ T_{ped} - T_{sep} }{1 - \rho_{ped} } \right) 
 \end{equation}
-
-\section{Reactivity -- $(\sigma v)$}
-
-When discussing reactivity, the place to start is talking about fusion power,
-\begin{equation}
-	P_F = \int E_F \, n_D \, n_T \, \langle \sigma v \rangle \, d \textbf{r}
-\end{equation}
-
-For the tokamak geometry given, volume integrals can be reduced to 0-D forms. 
-
-An arbitrary $F(\rho)$ has that:
-\begin{equation}
-	F_V = 4 \, \pi ^2 \, R_0 \, a^2 \kappa \, g \int\limits_0^1 F(\rho) \rho d\rho
-\end{equation}
-
-Given that $E_F = 17.6$ MeV and,
-\begin{equation}
-	n_D = n_T = f_D \frac {n_e}{2} = \frac{f_D}{2} \cdot \, \left( \ \overline{n} \, ( 1 + \nu_n ) \, ( 1 - \rho^2 ) ^ {\, \nu_n} \, \right) 
-\end{equation}
-
-Fusion power can be expressed as,
-\begin{equation}
-	P_F = K_F \cdot ( \, \overline{n}^2 \, R_0^3 \, ) \cdot (\sigma v) \ \ \ [MW]
-\end{equation}
-\begin{equation}
-	 (\sigma v) = 10^{21} \, (1+\nu_n)^2 \int\limits_0^1 ( 1 - \rho^2 ) ^ { \, 2 \nu_n} \langle \sigma v \rangle \, \rho \, d\rho
-\end{equation}
-\begin{equation}
-	K_F = 278.3 \, ( f_D^2 \, \epsilon^2 \kappa \, g )
-\end{equation}
-
-The Bosch-Hale parametrization of the volumetric reaction rates is then given by,
-\begin{equation}
-	\tcboxmath{
-	\langle \sigma v \rangle = C_1 \cdot \theta \cdot \textnormal{exp}(-3 \xi) \cdot \sqrt{ \frac{\xi  }{m_\mu  c^2 T^3} }  \ \ \, [ \, \sfrac{ \textnormal{m}^3 }{ \textnormal{s} } \, ] }
-\end{equation}
-\begin{equation} 
-	\theta = T \cdot \left(1-\frac{T(C_2+T(C_4+TC_6))}{1+T(C_3+T(C_5+TC_7))}\right) ^{-1}
-\end{equation}
-\begin{equation}
-	\xi = \left(\frac{B_G^2}{4\theta}\right)^{1/3}
-\end{equation}
-
-Where approximate DT volumetric reaction rate ($10\lesssim~T~\mathrm{[keV]}\lesssim20$)
-\begin{equation}
-		\langle\sigma v\rangle_\mathrm{DT} = 1.1\times10^{-24} \cdot  \, T^2   \ \ \ [ \, \sfrac{ \textnormal{m}^3 }{ \textnormal{s} } \, ]
-\end{equation}
-
-In our model, each appearance of T is set to the pedestal profile defined earlier.
-
-\begin{table}[h!]\small
-  \noindent
-  \centering
-  \begin{tabular}{c | c c | c | c}
-    \multicolumn{5}{c}{Bosch-Hale parametrization coefficients for volumetric reaction rates}\\
-    \hline
-    & $^2$H(d,n)$^3$He & $^2$H(d,p)$^3$H & $^3H$(d,n)$^4$He & $^3$He(d,p)$^4$He\\
-    \hline\hline
-    B$_G$ [keV$^{1/2}$] & 31.3970 & 31.3970 & 34.3827   & 68.7508 \\
-    $m_\mu c^2$ [keV]   & 937 814 & 937 814 & 1 124 656 & 1 124 572 \\
-    \hline
-            % 2H(d,n)                    % 2H(d,p)                   % 3H(d,n)                    % 3He(d,p)
-    C$_1$& 5.43360$\times$10$^{-12}$  & 5.65718$\times$10$^{-12}$ & 1.17302$\times$10$^{-9}$  & 5.51036$\times$10$^{-10}$ \\ 
-    C$_2$  & 5.85778$\times$10$^{-3}$   & 3.41267$\times$10$^{-3}$  & 1.51361$\times$10$^{-2}$  & 6.41918$\times$10$^{-3}$ \\
-    C$_3$  & 7.68222$\times$10$^{-3}$   & 1.99167$\times$10$^{-3}$  & 7.51886$\times$10$^{-2}$  & -2.02896$\times$10$^{-3}$ \\
-    C$_4$  & 0.0                        & 0.0                       & 4.60643$\times$10$^{-3}$  & -1.91080$\times$10$^{-5}$ \\
-    C$_5$  & -2.96400$\times$10$^{-6}$  & 1.05060$\times$10$^{-5}$  & 1.35000$\times$10$^{-2}$  & 1.35776$\times$10$^{-4}$ \\
-    C$_6$  & 0.0                        & 0.0                       & -1.06750$\times$10$^{-4}$ & 0.0 \\
-    C$_7$& 0.0                      & 0.0                       & 1.36600$\times$10$^{-5}$  & 0.0 \\
-    \hline
-    Valid range (keV) & 0.2$<$T$_i<$100 & 0.2$<$T$_i<$100 & 0.2$<$T$_i<$100 & 0.5$<$T$_i<$190\\
-    \hline
-  \end{tabular}
-  \label{table:rrParam}
-\end{table}
-
-\begin{table}[h!]\small
-  \noindent
-  \centering
-  \begin{tabular}{c | c c | c | c}
-    \multicolumn{5}{c}{Tabulated Bosch-Hale reaction rates [m$^3$~s$^{-1}$]}\\
-    \hline
-    T (keV) & $^2$H(d,n)$^3$He & $^2$H(d,p)$^3$H & $^3H$(d,n)$^4$He & $^3$He(d,p)$^4$He\\
-    \hline\hline
-    1.0& 9.933$\times$10$^{-29}$ & 1.017$\times$10$^{-28}$ & 6.857$\times$10$^{-27}$ & 3.057$\times$10$^{-32}$ \\
-    1.5  & 8.284$\times$10$^{-28}$ & 8.431$\times$10$^{-28}$ & 6.923$\times$10$^{-26}$ & 1.317$\times$10$^{-30}$ \\
-    2.0  & 3.110$\times$10$^{-27}$ & 3.150$\times$10$^{-27}$ & 2.977$\times$10$^{-25}$ & 1.399$\times$10$^{-29}$ \\
-    3.0  & 1.602$\times$10$^{-26}$ & 1.608$\times$10$^{-26}$ & 1.867$\times$10$^{-24}$ & 2.676$\times$10$^{-28}$ \\
-    4.0  & 4.447$\times$10$^{-26}$ & 4.428$\times$10$^{-26}$ & 5.974$\times$10$^{-24}$ & 1.710$\times$10$^{-27}$ \\
-    5.0  & 9.128$\times$10$^{-26}$ & 9.024$\times$10$^{-26}$ & 1.366$\times$10$^{-23}$ & 6.377$\times$10$^{-27}$ \\
-    8.0  & 3.457$\times$10$^{-25}$ & 3.354$\times$10$^{-25}$ & 6.222$\times$10$^{-23}$ & 7.504$\times$10$^{-26}$ \\
-   10.0  & 6.023$\times$10$^{-25}$ & 5.781$\times$10$^{-25}$ & 1.136$\times$10$^{-22}$ & 2.126$\times$10$^{-25}$ \\
-   12.0  & 9.175$\times$10$^{-25}$ & 8.723$\times$10$^{-25}$ & 1.747$\times$10$^{-22}$ & 4.715$\times$10$^{-25}$ \\
-   15.0  & 1.481$\times$10$^{-24}$ & 1.390$\times$10$^{-24}$ & 2.740$\times$10$^{-22}$ & 1.175$\times$10$^{-24}$ \\
-   20.0& 2.603$\times$10$^{-24}$ & 2.399$\times$10$^{-24}$ & 4.330$\times$10$^{-22}$ & 3.482$\times$10$^{-24}$ \\
-   \hline
-  \end{tabular}
-  \label{table:rr}
-\end{table}
-
 \section{Volume Averaged Powers}
 
 The first thing to consider in a fusion reactor is power balance. \\ It is what separates a profitable device from a toaster. It's given by:
